<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_friends" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_event" />
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_marks" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_schedule" />
    </group>

    <item
        android:id="@+id/nav_logoff"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_logoff" />

</menu>
