<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#b6abad"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".gui.events.CreateEventActivity"
    tools:showIn="@layout/activity_create_event"
    android:clickable="false"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editText1"
        android:gravity="center_vertical"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView1"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/event_category"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editText2"
        android:gravity="center_vertical"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText1"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_below="@+id/textView3"
        android:layout_alignBottom="@+id/spin_dates" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/spin_dates"
        android:layout_toEndOf="@+id/textView4"
        android:layout_below="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_initial_date"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editText3"
        android:layout_toStartOf="@+id/spin_dates"
        android:textColor="#000000"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView5"
        android:hint="@string/hint_day"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_final_date"
        android:id="@+id/textView6"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignEnd="@+id/textView5"
        android:textColor="#000000"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_toEndOf="@+id/textView5"
        android:layout_below="@+id/editText3"
        android:hint="@string/hint_day"
        android:visibility="invisible"
        android:inputType="date" />

    <TextView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/event_initial_hour"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/editText3"
        android:layout_toEndOf="@+id/editText3"
        android:layout_marginStart="21dp"
        android:layout_above="@+id/editText4"
        android:textColor="#000000"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_alignTop="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:hint="@string/hint_hour"
        android:layout_above="@+id/textView8"
        android:visibility="invisible"
        android:inputType="time" />

    <TextView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/event_final_hour"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_above="@+id/editText7"
        android:textColor="#000000"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:hint="@string/hint_hour"
        android:layout_alignEnd="@+id/editText5"
        android:layout_above="@+id/editText7"
        android:layout_alignStart="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:visibility="invisible"
        android:inputType="time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_local"
        android:id="@+id/textView9"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:layout_alignBottom="@+id/editText7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:layout_toEndOf="@+id/textView9"
        android:layout_below="@+id/editText4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_visibility"
        android:id="@+id/textView10"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add"
        android:id="@+id/btn_create"
        android:textColor="#ffffff"
        android:onClick="createEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_escolher"
        android:id="@+id/button"
        android:layout_above="@+id/editText2"
        android:layout_toEndOf="@+id/textView10"
        android:onClick="getCategoryFromUser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_escolher"
        android:id="@+id/button2"
        android:onClick="getVisibilityFromUser"
        android:layout_below="@+id/editText7"
        android:layout_toStartOf="@+id/textView8"
        android:layout_marginTop="28dp" />

</RelativeLayout>
