<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="80dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:id="@+id/mark_epoca"
        android:textSize="17sp"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:text="@string/mark_epoca"
        android:layout_toStartOf="@+id/mark_grade"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/mark_type_avaliation"
        android:id="@+id/mark_type_avaliation"
        android:textSize="15sp"
        android:layout_below="@+id/mark_epoca"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/mark_grade"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/mark_grade"
        android:id="@+id/mark_grade"
        android:layout_alignParentTop="true"
        android:textSize="17sp"
        android:layout_above="@+id/mark_view"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e4d6d6"
        android:id="@+id/mark_view"
        android:layout_alignBottom="@+id/mark_type_avaliation"
        android:layout_alignParentStart="true" />
</RelativeLayout>