<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#b6abad"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dam.projects.projectdam.gui.events.PropertiesEventActivity"
    tools:showIn="@layout/activity_properties_event">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/event_list_name"
        android:id="@+id/title_event_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/text_event_name"
        android:gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/title_event_desc"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/title_event_final_date"
        android:layout_alignStart="@+id/editText_event_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/event_list_desc"
        android:id="@+id/title_event_desc"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_below="@+id/title_event_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editText_event_desc"
        android:gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text_event_name"
        android:layout_above="@+id/editText_event_initial_date"
        android:layout_toEndOf="@+id/title_event_initial_date"
        android:layout_alignStart="@+id/editText_event_initial_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/event_list_initial_date"
        android:id="@+id/title_event_initial_date"
        android:layout_below="@+id/title_event_desc"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editText_event_initial_date"
        android:gravity="center_vertical"
        android:layout_below="@+id/title_event_desc"
        android:layout_above="@+id/title_event_final_date"
        android:layout_toStartOf="@+id/text_event_initial_hour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/text_event_initial_hour"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/editText_event_initial_date"
        android:layout_alignTop="@+id/editText_event_initial_date"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btn_add_calendar"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/event_final_date"
        android:id="@+id/title_event_final_date"
        android:layout_below="@+id/title_event_initial_date"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="New Text"
        android:id="@+id/editText_event_initial_hour"
        android:gravity="center_vertical"
        android:layout_alignEnd="@+id/editText_event_initial_date"
        android:layout_below="@+id/title_event_initial_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/text_event_final_hour"
        android:gravity="center_vertical"
        android:layout_alignEnd="@+id/text_event_initial_hour"
        android:layout_alignBottom="@+id/editText_event_initial_hour"
        android:layout_below="@+id/text_event_initial_hour"
        android:layout_marginLeft="0dp"
        android:layout_alignStart="@+id/text_event_initial_hour" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_list_calendar"
        android:id="@+id/textView12"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/btn_add_calendar"
        android:layout_alignTop="@+id/btn_add_calendar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_list_add_calendar"
        android:id="@+id/btn_add_calendar"
        android:onClick="addToCalendarAPI"
        android:layout_toEndOf="@+id/textView12"
        android:layout_below="@+id/title_event_final_date" />

</RelativeLayout>
